--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "note-management-app",
-  "version": "0.1.0",
+  "name": "notes-app",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "PORT=2024 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/embed": "^2.6.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.11.3",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/underline": "^1.1.0",
+    "@popperjs/core": "^2.11.8",
+    "@sotaproject/strikethrough": "^1.0.1",
+    "bootstrap": "^5.3.2",
+    "editorjs-alert": "^1.1.3",
+    "editorjs-change-case": "^0.0.3",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
+    "editorjs-text-color-plugin": "^2.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.2",
+    "tailwindcss": "^3.4.3",
+    "vite": "^4.4.5"
   }
 }
