--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "editorjs-text-color-plugin": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-masonry-css": "^1.0.16"
+    "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -40,7 +41,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.69.2",
-    "tailwindcss": "^3.4.3",
     "vite": "^4.4.5"
   }
 }
