--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
